# open-vidqc

./: .gitignore  CLAUDE.md  COMMERCIAL_LICENSE.md  Dockerfile  LICENSE  PRODUCTION_PLAN.md  PROGRESS.md  README.md  SPEC.md  config.yaml  labels.csv  pyproject.toml
.github/workflows/: ci.yml
reports/: model_performance.ipynb
tests/: conftest.py  test_blur_suppression.py  test_category_constraint.py  test_classifier_gpu_device.py  test_common_features.py  test_determinism.py  test_frame_extraction.py  test_gpu_config_validation.py  test_gpu_resolution.py  test_no_text_gate.py  test_review_bboxes_tool.py  test_scene_cut_suppression.py  test_scene_cut_with_flicker.py  test_schema.py  test_segment_display_config_validation.py  test_segment_display_fallback.py  test_temporal_evidence_fallback.py  test_temporal_features.py  test_text_bbox_stats.py  test_text_evidence_fallback.py  test_text_features.py
tools/: benchmark_segment_fallback.py  compare_distributions.py  fetch_sora.py  fetch_veo3.py  make_dataset.py  prompts.txt  review_bboxes.py  verify_milestone3.py
vidqc/: __main__.py  cli.py  config.py  eval.py  predict.py  schemas.py  train.py
vidqc/features/: __init__.py  common.py  extract.py  feature_manifest.py  scene_segmentation.py  temporal_flicker.py  text_inconsistency.py
vidqc/models/: classifier.py
vidqc/utils/: acceleration.py  logging.py  video.py
