[project]
name = "vidqc"
version = "0.1.0"
description = "Video artifact detection for AI-generated clips"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python-headless>=4.9",
    "easyocr>=1.7",
    "scikit-image>=0.22",
    "xgboost>=2.0",
    "scikit-learn>=1.4",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "Pillow>=10.2",
    "tqdm>=4.66",
]

[project.scripts]
vidqc = "vidqc.__main__:main"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.3", "mypy>=1.8"]
dataset = ["openai>=1.12", "google-genai>=1.0", "requests>=2.31"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
